app/assets/stylesheets/pages/_home.scss
/* ... */
.shootingstar:nth-child(2){
  top: 13%;
  left: 70%;
  animation-delay: 6s;
}
.shootingstar:nth-child(3){
  top: 66%;
  left: 84%;
  animation-delay: 12s;
}
.shootingstar:nth-child(4){
  top: 59%;
  left: 70%;
  animation-delay: 18s;
}
.shootingstar:nth-child(5){
  top: 29%;
  left: 60%;
  animation-delay: 8s;
}



//__stars and shootingstars placement finished here_______________________________________

.skybox{
  flex-shrink: 0;
  top: 0;
  width: 100vw;
  height: 180vh;
  overflow: hidden;
  background: linear-gradient(180deg, rgba(23,0,74,0.7) 0%, rgba(37,0,99,0.4) 14%, rgba(85, 0, 124, 0) 40%,rgba(255, 0, 179, 0.3) 80%, rgba(215, 79, 95, 0.6) 95%, rgba(255, 195, 91, 0.7) 100%);
  opacity: 0;
  position:relative;
  animation-name: nonechangeone;
  animation-delay: 5s;
  animation-duration: 4s;
  animation-timing-function: ease-in;
  animation-fill-mode: forwards
}

.sun{
  position: absolute;
  width: 50vw;
  height: 50vw;
  background: radial-gradient(circle, rgba(255, 210, 142, 0.6) 0%, rgba(197, 70, 123, 0.2) 30%, rgba(197, 70, 123, 0) 50%, rgba(255, 158, 0, 0) 50%);
  bottom: -25vw;
  left: 45vw;
  transform: scaleX(5);
}

.mountain{
  position: absolute;
  width: 20vw;
  height: 10vw;
  bottom: 3vw;
  left: 10vw;
  background: linear-gradient(180deg, rgba(23,0,74,1) 0%, rgba(37,0,99,0.5) 60%,rgba(37,0,99,0.1) 90%, rgba(56,0,124,0) 100%);
  transform: scaleX(2);
  clip-path: polygon(0 100%,1% 93%,6% 85%,10% 83%,15% 74%,18% 78%,24% 73%,28% 78%,29% 83%,33% 88%,36% 83%, 38% 89%, 41% 94%, 47% 85%, 55% 80%, 59% 76%, 65% 74%, 68% 78%, 70% 74%, 73% 70%, 78% 68%, 85% 63%, 89% 73%, 93% 79%, 96% 84%, 99% 94%, 100% 100%) ;
}

.mountain:nth-child(1){
  bottom: 1vw;
  left: 5vw;
  clip-path: polygon(0 100%,1% 93%,6% 85%,10% 83%,15% 78%,18% 68%,24% 73%,28% 88%,29% 83%,33% 88%,36% 83%, 38% 94%, 41% 76%, 47% 65%, 55% 75%, 59% 76%, 65% 84%, 68% 78%, 70% 74%, 73% 70%, 78% 65%, 85% 70%, 89% 76%, 93% 84%, 96% 88%, 99% 94%, 100% 100%) ;
}
.mountain:nth-child(2){
  bottom: 2vw;
  left: 95vw;

  clip-path: polygon(0 100%,1% 98%,4% 94%,6% 89%,8% 85%,11% 90%,16% 89%,19% 83%,23% 85%,28% 81%,29% 78%,31% 74%,34% 72%,37% 85%,40% 83%,43% 88%,46% 83%, 50% 94%, 53% 76%, 56% 65%, 58% 75%, 61% 76%, 65% 84%, 68% 78%, 70% 74%, 73% 70%, 78% 65%, 85% 70%, 89% 76%, 93% 84%, 96% 88%, 99% 94%, 100% 100%) ;
}
.mountain:nth-child(3){
  bottom: 0;
  left: 35vw;
  background: linear-gradient(180deg, rgb(20, 1, 60) 0%, rgba(38, 7, 91, 0.6) 80%,rgba(37,0,99,0.4) 90%, rgba(56,0,124,0) 100%);
  clip-path: polygon(0 100%,1% 93%,6% 85%,10% 83%,15% 78%,18% 73%,24% 73%,28% 78%,29% 83%,33% 88%,36% 83%, 38% 85%, 41% 76%, 47% 65%, 55% 75%, 59% 76%, 65% 84%, 68% 78%, 70% 74%, 73% 70%, 78% 75%, 85% 84%, 89% 76%, 93% 84%, 96% 88%, 99% 94%, 100% 100%) ;
}
.mountain:nth-child(4){
  bottom: 2vw;
  left: 45vw;
  background: linear-gradient(180deg, rgb(20, 1, 60) 0%, rgba(38, 7, 91, 0.5) 80%,rgba(37,0,99,0.3) 90%, rgba(56,0,124,0) 100%);
  clip-path: polygon(0 100%,1% 93%,6% 85%,10% 83%,15% 88%,18% 89%,24% 86%,28% 88%,29% 83%,33% 87%,36% 82%, 38% 89%, 41% 92%, 47% 85%, 55% 89%, 59% 81%, 65% 87%, 68% 88%, 70% 84%, 73% 82%, 78% 80%, 85% 81%, 89% 86%, 93% 84%, 96% 88%, 99% 94%, 100% 100%) ;
}
.mountain:nth-child(5){
  bottom: 0;
  left: 75vw;
  clip-path: polygon(0 100%,1% 98%,4% 94%,6% 89%,8% 85%,11% 90%,16% 89%,19% 83%,23% 85%,28% 81%,29% 78%,31% 74%,34% 72%,37% 80%,40% 83%,43% 88%,46% 83%, 50% 89%, 53% 78%, 56% 74%, 58% 70%, 61% 74%, 65% 81%, 68% 78%, 70% 74%, 73% 71%, 78% 67%, 85% 62%, 89% 66%, 93% 79%, 96% 80%, 99% 94%, 100% 100%) ;
  background: rgba(0, 0, 0, 1);
}
.mountain:nth-child(6){
  bottom: 0;
  width: 40vw;
  left: 15vw;
  background: rgba(0, 0, 0, 1);
  clip-path: polygon(0 100%, 1% 93%, 4% 85%, 6% 53%, 8% 45%, 11% 51%, 16% 65%, 19% 78%, 23% 85%, 28% 83%, 29% 78%, 31% 68%, 34% 73%, 37% 88%, 40% 83%, 43% 88%, 46% 83%, 50% 80%, 53% 74%, 56% 69%, 58% 75%, 61% 76%, 65% 91%, 68% 88%, 70% 91%, 73% 89%, 78% 72%, 85% 79%, 89% 76%, 93% 84%, 96% 88%, 99% 94%, 100% 100%);
}


.landbox{
  flex-shrink: 0;
  width: 100vw;
  height: calc((200vh + 200vw) );
  overflow: hidden;
  background: black;
  opacity: 0;
  position: absolute;
  top:140vh;
  right:0px;
  bottom:0px;
  left:0px;
  animation-name: nonechangeone;
  animation-delay: 5s;
  animation-duration: 4s;
  animation-timing-function: ease-in;
  animation-fill-mode: forwards
}





.thanks{
  color: rgb(255, 255, 255);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  opacity: 0;
  position: absolute;
  top:0px;
  right:0px;
  bottom:0px;
  left:0px;
  padding: 20vw;
  text-shadow: 0px 0px 5px #00f3ff, 0px 0px 20px #1f003f,0px 0px 15px #1f003f;
  animation-name: thankschange;
  animation-delay: 11s;
  animation-duration: 4s;
  animation-timing-function: ease-in;
  animation-fill-mode: forwards
}
@keyframes thankschange {
  0% {opacity: 0;}
  100% {opacity: 1;}
}




@keyframes nonechangeone {
  0% {opacity: 0;}
  100% {opacity: 1;}
}

@keyframes nonechangeeight {
  0% {opacity: 0;}
  100% {opacity: 0.8;}
}

@keyframes shine{
  0% {opacity: 1;}
  50% {opacity: 0.5;}
  100% {opacity: 1;}
}

@keyframes fall{
  0% {
    opacity: 0;
    width: 0px;
    transform: translateX(0);
  }
  3% {
    opacity: 1;
    width: 400px;

  }
  6% {
    opacity: 0;
    width: 0px;
    transform: translateX(-1300px);
  }
  100%{
    opacity: 0;
    width: 0px;
  }
}

